bon/tests/integration/ui/compile_fail/map_macro.stderr
error: duplicate map key
 --> tests/integration/ui/compile_fail/map_macro.rs:7:9
  |
7 |         async { 2u64 + 1 }.await: "Mars",
  |         ^^^^^

error: duplicate map key
  --> tests/integration/ui/compile_fail/map_macro.rs:14:9
   |
14 |         "Hello": "Mars",
   |         ^^^^^^^
